# STM32L4-Dev-Board-Projects

./: .mxproject  CMakeLists.txt  DevBoard-STM32L4.ioc  LICENSE  README.md  STM32L476RGTx_FLASH.ld
Core/Inc/: FreeRTOSConfig.h  stm32l4xx_it.h
Core/Src/: main.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
EWARM/: DevBoard-STM32L4.ewd  DevBoard-STM32L4.ewp  Project.eww
user/inc/: user_threads.h
user/src/: user_threads.cpp
