cmake_minimum_required(VERSION 4.2)
project(DevBoard_STM32L4)

set(CMAKE_CXX_STANDARD 14)

include_directories(Core/Inc)
include_directories(Drivers/CMSIS/Core/Include)
include_directories(Drivers/CMSIS/Device/ST/STM32L4xx/Include)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/basic_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/complex_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/controller_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/fast_math_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/filtering_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/intrinsics_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/matrix_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/statistics_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/support_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/templates)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/inc/transform_tests)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/arr_desc)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/opt_arg)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/Common/JTest/inc/util)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/CMSIS)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/DspLibTest_FVP_A5/RTE/Device/ARMCA5)
include_directories(Drivers/CMSIS/DSP/DSP_Lib_TestSuite/RefLibs/inc)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_convolution_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_fir_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_graphic_equalizer_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_linear_interp_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_matrix_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/arm_signal_converge_example)
include_directories(Drivers/CMSIS/DSP/Examples/ARM/boot)
include_directories(Drivers/CMSIS/DSP/Include)
include_directories(Drivers/CMSIS/DSP/PythonWrapper/cmsisdsp_pkg/src)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/RTE/_ARMCM0)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/RTE/_ARMCM3)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/RTE/_ARMCM4_FP)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/RTE/_ARMCM7_SP)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/cifar10/RTE/Compiler)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/RTE/_ARMCM0)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/RTE/_ARMCM3)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/RTE/_ARMCM4_FP)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/RTE/_ARMCM7_SP)
include_directories(Drivers/CMSIS/NN/Examples/ARM/arm_nn_examples/gru/RTE/Compiler)
include_directories(Drivers/CMSIS/NN/Examples/IAR/iar_nn_examples/NN-example-cifar10)
include_directories(Drivers/CMSIS/NN/Examples/IAR/iar_nn_examples/NN-example-gru)
include_directories(Drivers/CMSIS/NN/Include)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/Ref_Implementations)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/RTE/_ARMCM0)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/RTE/_ARMCM3)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/RTE/_ARMCM4_FP)
include_directories(Drivers/CMSIS/NN/NN_Lib_Tests/nn_test/RTE/_ARMCM7_SP)
include_directories(Drivers/CMSIS/RTOS)
include_directories(Drivers/CMSIS/RTOS/Template)
include_directories(Drivers/CMSIS/RTOS2/Include)
include_directories(Drivers/CMSIS/RTOS2/Template)
include_directories(Drivers/STM32L4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32L4xx_HAL_Driver/Inc/Legacy)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/include)
include_directories(Middlewares/Third_Party/FreeRTOS/Source/portable/IAR/ARM_CM4F)
include_directories(user/inc)

add_executable(DevBoard_STM32L4
        Core/Src/main.c
        Core/Src/freertos.c
        Core/Src/stm32l4xx_it.c
        Core/Src/stm32l4xx_hal_msp.c
        Core/Src/system_stm32l4xx.c
        # if more files, add here
)
